RESOLVED FIXED144089
[WK2] WebDiagnosticLoggingClient is leaking
https://bugs.webkit.org/show_bug.cgi?id=144089
Summary [WK2] WebDiagnosticLoggingClient is leaking
Chris Dumez
Reported 2015-04-22 22:36:15 PDT
WebDiagnosticLoggingClient is leaking. It is constructed inside the WebPage constructor but there is no code destroying it. We should add a new xxxDestroyed() virtual function that calls "delete this" in WebDiagnosticLoggingClient, similarly to what is done for other WK2 clients. Radar: <rdar://problem/19706214>
Attachments
Patch (6.04 KB, patch)
2015-04-22 23:18 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-04-22 23:18:15 PDT
WebKit Commit Bot
Comment 2 2015-04-23 01:13:40 PDT
Comment on attachment 251410 [details] Patch Clearing flags on attachment: 251410 Committed r183179: <http://trac.webkit.org/changeset/183179>
WebKit Commit Bot
Comment 3 2015-04-23 01:13:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.