Source/WebCore/page/DiagnosticLoggingClient.h
@@ -39,6 +39,8 @@ public:
     virtual void logDiagnosticMessageWithResult(const String& message, const String& description, DiagnosticLoggingResultType, ShouldSample) = 0;
     virtual void logDiagnosticMessageWithValue(const String& message, const String& description, const String& value, ShouldSample) = 0;
 
+    virtual void mainFrameDestroyed() = 0;
+
 protected:
     virtual ~DiagnosticLoggingClient() { }
 };
